# Datathon_2026

./: .gitignore  Dockerfile  Dockerfile.mcp  Everythingisnormal-Presentation.pptx  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_all.ps1
app/: config.py  main.py
app/api/routes/: listings.py
app/core/: hard_filters.py
app/harness/: bootstrap.py  conversation_store.py  csv_import.py  is_furnished_migration.py  search_service.py
app/models/: schemas.py
app/participant/: hard_fact_extraction.py  hard_filter.py  listing_row_parser.py  local_embeddings.py  query_parser.py  ranking.py  soft_fact_extraction.py  soft_filtering.py
apps_sdk/web/: Dockerfile
apps_sdk/web/src/: App.tsx  styles.css
apps_sdk/web/src/components/: ListingsMap.tsx  RankedList.tsx
raw_data/: robinreal_data_withimages-1776461278845.csv
scripts/: add_is_furnished.py  analyze_csv_uniques.py  embed_images.py  embed_listings.py  embed_listings_local.py  enrich_csvs.py  enrich_locations_from_geo.py  fill_canton_from_zip.py  fill_canton_static.py  fix_prices.py  image_search.py  inspect_query_outputs.py  inspect_query_outputs_de.py  recover_failed_batches.py  semantic_search.py  test_query_parser.py
side_challenge/: AWS.txt  claude.txt
tests/: test_api.py  test_hard_filters.py  test_pipeline.py  test_schemas.py
